# prog_lab4

./: Ball.cpp  Ball.hpp  CMakeLists.txt  Color.cpp  Color.h  Dust.cpp  Dust.hpp  Physics.cpp  Physics.h  Point.h  Velocity.h  World.cpp  World.h  main.cpp  myWORLD!.txt
.github/workflows/: multiplatform.yml
